tests/codegen/fail/input_object/struct/derive_all_fields_ignored.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
struct Object {
    #[graphql(ignore)]
    field: String,
}

fn main() {}
